; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/rpc/extr_svc_raw.c_svc_raw_freeargs.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/rpc/extr_svc_raw.c_svc_raw_freeargs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_raw_private = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@svcraw_lock = common dso_local global i32 0, align 4
@svc_raw_private = common dso_local global %struct.svc_raw_private* null, align 8
@FALSE = common dso_local global i32 0, align 4
@XDR_FREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32 (%struct.TYPE_5__*, i8*)*, i8*)* @svc_raw_freeargs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @svc_raw_freeargs(i32* %0, i32 (%struct.TYPE_5__*, i8*)* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32 (%struct.TYPE_5__*, i8*)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.svc_raw_private*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %5, align 8
  store i32 (%struct.TYPE_5__*, i8*)* %1, i32 (%struct.TYPE_5__*, i8*)** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = call i32 @mutex_lock(i32* @svcraw_lock)
  %11 = load %struct.svc_raw_private*, %struct.svc_raw_private** @svc_raw_private, align 8
  store %struct.svc_raw_private* %11, %struct.svc_raw_private** %8, align 8
  %12 = load %struct.svc_raw_private*, %struct.svc_raw_private** %8, align 8
  %13 = icmp eq %struct.svc_raw_private* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = call i32 @mutex_unlock(i32* @svcraw_lock)
  %16 = load i32, i32* @FALSE, align 4
  store i32 %16, i32* %4, align 4
  br label %28

17:                                               ; preds = %3
  %18 = call i32 @mutex_unlock(i32* @svcraw_lock)
  %19 = load %struct.svc_raw_private*, %struct.svc_raw_private** %8, align 8
  %20 = getelementptr inbounds %struct.svc_raw_private, %struct.svc_raw_private* %19, i32 0, i32 0
  store %struct.TYPE_5__* %20, %struct.TYPE_5__** %9, align 8
  %21 = load i32, i32* @XDR_FREE, align 4
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  %24 = load i32 (%struct.TYPE_5__*, i8*)*, i32 (%struct.TYPE_5__*, i8*)** %6, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = call i32 %24(%struct.TYPE_5__* %25, i8* %26)
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %17, %14
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
